@@ -1,3 +1,5 @@
+* Added an optional cause attribute to the Result class that receives the provider's error message in case of a FAILURE result. [ODF]
+
 * Fake HTTP method from OpenID server since they only support a GET. Eliminates the need to set an extra route to match the server's reply. [Josh Peek]
 
 * OpenID 2.0 recommends that forms should use the field name "openid_identifier" rather than "openid_url" [Josh Peek]
